@@ -1,6 +1,7 @@
 0.05
  - Fix typo in doc.
  - Fix use lib '.' in Makefile.PL.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
 
 0.04 2015-10-22T11:41:11+02:00
